--- a/src/views/cdSala.ejs
+++ b/src/views/cdSala.ejs
@@ -28,18 +28,18 @@
 
 
   <main>
-    <form>
+    <form action="/cdSala"> 
       <h2>Cadastrar uma nova sala</h2>
       
       <div class="informa">
 
         <div class="form-group">
-          <label for="exampleFormControlInput1">Nome</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1">
+          <label for="Nome">Nome</label>
+          <input type="text" class="form-control" id="Nome">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlInput2">Capacidade</label>
-          <input type="number" class="form-control" id="exampleFormControlInput2">
+          <label for="Capacidade">Capacidade</label>
+          <input type="number" class="form-control" id="Capacidade">
         </div>
         <button type="submit" class="btn btn-primary mb-2">Cadastrar</button>
 
