--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
         <strong>Cadastrar:</strong>
         <a class="p-2 text-dark" href="cdAlunos.ejs">Alunos</a>
         |
-        <a class="p-2 text-dark" href="cdSala.ejs">Sala</a>
+        <a class="p-2 text-dark" href="/cdSala">Sala</a>
     </nav>
   </header>
 
