--- a/src/views/cdAlunos.ejs
+++ b/src/views/cdAlunos.ejs
@@ -37,20 +37,20 @@
         <input type="file" id="files">
 
         <div class="form-group">
-          <label for="exampleFormControlInput1">Nome</label>
-          <input type="text" class="form-control" id="exampleFormControlInput1">
+          <label for="nome">Nome</label>
+          <input type="text" class="form-control" id="nome">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlInput2">Idade</label>
-          <input type="number" class="form-control" id="exampleFormControlInput2">
+          <label for="idade">Idade</label>
+          <input type="number" class="form-control" id="idade">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlInput3">Sexo</label>
-          <input type="text" class="form-control" id="exampleFormControlInput3">
+          <label for="sexo">Sexo</label>
+          <input type="text" class="form-control" id="sexo">
         </div>
         <div class="form-group">
-          <label for="exampleFormControlSelect4">Sala de aula</label>
-          <select class="form-control" id="exampleFormControlSelect4">
+          <label for="selectSala">Sala de aula</label>
+          <select class="form-control" id="selectSala">
             <option>1</option>
             <option>2</option>
             <option>3</option>
