--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <script src="./script.js" defer></script>
+    <script src="javascript/script.js" defer></script>
 
     <title>Página Inicial</title>
  </head>
@@ -13,6 +13,7 @@
  <body>
   <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 
+    
     <a class="mr-auto my-0 linkPrincipal" href="index.ejs">
       <h5 class="mr-2 " id="tituloColor">CONTROLE</h5>
       <h5 class=""> de Estudantes</h5>
@@ -20,7 +21,7 @@
   
     <nav class="my-2 my-md-0 mr-md-3">
         <strong>Cadastrar:</strong>
-        <a class="p-2 text-dark" href="cdAlunos.ejs">Alunos</a>
+        <a class="p-2 text-dark" href="/cdAlunos">Alunos</a>
         |
         <a class="p-2 text-dark" href="/cdSala">Sala</a>
     </nav>
@@ -29,13 +30,9 @@
 
   <main>
       <div class="dropdown indexDrop">
-        <label for="exampleFormControlSelect1">Salas de aula:</label>
-        <select class="drops" id="exampleFormControlSelect1">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+        <label for="sala">Salas de aula:</label>
+        <select class="drops" id="sala" onchange="this.form.submit()" name="nome">
+          <option>Selecionar</option>
         </select>
       </div>
 
@@ -75,7 +72,7 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" src="imagens/mariana.jpg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
                 <div class="card-body">
-                  <p class="card-text">Idade: bocuda</p>
+                  <p class="card-text">Idade: sol</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-primary">Editar</button>
