--- a/src/views/cdAlunos.ejs
+++ b/src/views/cdAlunos.ejs
@@ -34,6 +34,7 @@
       <div class="informa">
 
         <label for="files"><img id="labelImg" name="labelImg" class="form-group" src="https://cdn-icons-png.flaticon.com/256/17/17004.png" alt="Default"></label>
+        <input type="file" id="files" name="file" value="https://cdn-icons-png.flaticon.com/256/17/17004.png">
 
         <div class="form-group">
           <label for="nome">Nome</label>
