--- a/src/views/cdAlunos.ejs
+++ b/src/views/cdAlunos.ejs
@@ -28,13 +28,13 @@
 
 
   <main>
-    <form action="/cdAlunos" method="post">
+    <form action="/cdAlunos" method="post" enctype="multipart/form-data">
       <h2>Cadastrar um novo aluno</h2>
       
       <div class="informa">
 
         <label for="files"><img id="labelImg" name="labelImg" class="form-group" src="https://cdn-icons-png.flaticon.com/256/17/17004.png" alt="Default"></label>
-        <input type="file" id="files" name="file" value="https://cdn-icons-png.flaticon.com/256/17/17004.png">
+        <input type="file" id="files" name="foto" value="https://cdn-icons-png.flaticon.com/256/17/17004.png">
 
         <div class="form-group">
           <label for="nome">Nome</label>
