--- a/src/views/cdAlunos.ejs
+++ b/src/views/cdAlunos.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <script src="javascript/script.js"defer></script>
+    <script src="../javascript/script.js"defer></script>
 
     <title>Cadastrar Aluno</title>
  </head>
@@ -13,7 +13,7 @@
  <body>
   <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 
-    <a class="mr-auto my-0 linkPrincipal" href="index.ejs">
+    <a class="mr-auto my-0 linkPrincipal" href="/index">
       <h5 class="mr-2 " id="tituloColor">CONTROLE</h5>
       <h5 class=""> de Estudantes</h5>
       </a>
