--- a/src/views/editarAluno.ejs
+++ b/src/views/editarAluno.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <script src="./script.js" defer></script>
+    <script src="/javascript/script.js" defer></script>
 
     <title>Cadastrar Sala</title>
  </head>
@@ -57,7 +57,7 @@
               <% } %>
             </select>
           </div>
-          <button type="submit" class="btn btn-primary mb-2" onclick="show()">Editar</button>
+          <button type="submit" class="btn btn-primary mb-2">Editar</button>
         </div>
       </form>
   </main>
