--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <script src="javascript/script.js" defer></script>
+    <script src="../javascript/script.js" defer></script>
 
     <title>Página Inicial</title>
  </head>
@@ -14,7 +14,7 @@
   <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 
     
-    <a class="mr-auto my-0 linkPrincipal" href="index.ejs">
+    <a class="mr-auto my-0 linkPrincipal" href="/index">
       <h5 class="mr-2 " id="tituloColor">CONTROLE</h5>
       <h5 class=""> de Estudantes</h5>
       </a>
@@ -29,15 +29,18 @@
 
 
   <main>
-      <form action="/" method="post">
-        <label for="sala">Salas de aula:</label>
-        <select class="drops" id="sala" onchange="this.form.submit()" name="nome">
+      <form action="/" method="post" class="forms">
+        Salas de aula:
+        <select class="drops" onchange="this.form.submit()" name="nome">
           <option hidden>Selecionar</option>
           <% for (let i=0; i<salas.length; i++) { %>
             <option value='<%= salas[i].IDSala %>' <%= id == salas[i].IDSala ? 'selected' : ''%>> <%= salas[i].Nome %> </option>
           <% } %>
         </select>
+
+        <a href="/editarSala/<%= id %>" class="btn" <%= !id? 'hidden' : '' %>>Editar Sala</a>
       </form>
+
 
       <div class="album py-5">
         <div class="container">
