--- a/src/views/editarSala.ejs
+++ b/src/views/editarSala.ejs
@@ -41,8 +41,9 @@
           <label for="Capacidade">Capacidade</label>
           <input type="number" class="form-control" id="Capacidade" name="capacidade" value="<%= salas.Capacidade %>">
         </div>
+        <button class="btn btn-primary mb-2" type="submit" value="Deletar" name="envio">Deletar</button>        
         <button type="submit" class="btn btn-primary mb-2">Atualizar</button>
-
+        
       </div>
     </form>
   </main>
