--- a/src/views/editarAluno.ejs
+++ b/src/views/editarAluno.ejs
@@ -57,6 +57,7 @@
               <% } %>
             </select>
           </div>
+          <button class="btn btn-primary mb-2" type="submit" value="Deletar" name="envio">Deletar</button>
           <button type="submit" class="btn btn-primary mb-2">Editar</button>
         </div>
       </form>
